# rust-collect-mac

./: Cargo.toml  README.md  update-docs.py
doc/collect_mac/: index.html  macro.collect!.html
doc/src/collect_mac/: lib.rs.html
src/: lib.rs
tests/: collect-std.rs
